bpo-29714:  Fix a regression that bytes format may fail when containing zero bytes inside. (GH-499)